manifests-demo/myapp-review-branch-1-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: review-branch-1
    k8ify.service: myapp
  name: myapp-review-branch-1
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    k8ify.ref-slug: review-branch-1
    k8ify.service: myapp
status:
  loadBalancer: {}
